--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "vite_react_shadcn_ts",
     "private": true,
     "version": "0.0.0",
+    "homepage": "https://viny-ll.github.io/RECIprocidade",
     "type": "module",
     "scripts": {
       "dev": "vite",
